
Coming in next release 
===============================================

Bug fixes: 
  * Added missing methods exports for custom indicators

Documentation and description changes: 
  * Updated references to reflect the publication of new paper presenting 
      the package <doi:10.1111/2041-210X.13058>
  * Fixed minor typos 
  
  
spatialwarnings v1.2 (Release date: 2018-06)
===============================================

Bug fixes: 
  * Compilation errors should be fixed on Solaris
  * Fixed coarse-graining bug when input values are non-integer
  
  
spatialwarnings v1.1 (Release date: 2018-06)
===============================================

This release provides changes as to satisfy referees' comments
prior to the publication of the package, as long as minor
improvements in documentation.

New features:
  * Support for custom indicators (see ?create_indicator)

Minor changes:
  * Documentation improvements
  * Safer handling of small matrices in SDR computation

Name changes
  * `*_spews` functions are now deprecated in favor of `*_sews` functions

Bug fixes
  * Counting patches in matrices with 1 line or 1 column
    does not crash R anymore
  * The R package should now build on Solaris

spatialwarnings v1.0 (Release date: 2017-11-03)
===============================================

Initial release
