@@ -4,8 +4,8 @@
 \alias{patchdistr_spews}
 \title{(DEPRECATED) Early-warning signals based on patch size distributions}
 \usage{
-patchdistr_spews(x, merge = FALSE, fit_lnorm = FALSE, best_by = "BIC",
-  xmin = 1, xmin_bounds = NULL, wrap = FALSE)
+patchdistr_spews(x, merge = FALSE, fit_lnorm = FALSE,
+  best_by = "BIC", xmin = 1, xmin_bounds = NULL, wrap = FALSE)
 }
 \arguments{
 \item{x}{A logical matrix (TRUE/FALSE values) or a list of these}
